--- a/game/hello_world/Makefile
+++ b/game/hello_world/Makefile
@@ -2,7 +2,7 @@ GAME_NAME = hello
 SOURCE = src/example.c
 
 CC = gcc
-FLAGS = -ggdb -std=c11
+FLAGS = -ggdb -std=c11 -fPIC
 LIBS_FOLDER = lib
 
 FOG_LIB :=
@@ -13,7 +13,7 @@ ifeq ($(shell uname -s),Linux)
 	FOG_LIB = $(LIBS_FOLDER)/libfog.a
 endif
 # Would be nice to remove some of these...
-LIBS = -lfog -lSDL2 -lSDL2main -ldl -lpthread -lc -lm
+LIBS = -lfog -lSDL2 -lSDL2main -ldl -lpthread -lc -lm -lc++
 INCUDES = -Iinc
 
 ASSET_BUILDER = ../../out/mist
@@ -21,11 +21,12 @@ ASSET_FILE = data.fog
 ASSETS = $(shell find res/ -type f -name "*.*")
 SOURCE_FILES = $(shell find src/ -type f -name "*.*")
 
-.PHONY: default run
+.PHONY: default run game
 
-default: $(ASSET_FILE) $(GAME_NAME)
+default: game
+game: $(ASSET_FILE) $(GAME_NAME)
 
-run: default
+run: $(GAME_NAME)
 	./$(GAME_NAME)
 
 $(ASSET_FILE): $(ASSETS) $(ASSET_BUILDER)
@@ -33,7 +34,6 @@ $(ASSET_FILE): $(ASSETS) $(ASSET_BUILDER)
 
 $(GAME_NAME): $(SOURCE_FILES) $(FOG_LIB)
 	$(CC) $(FLAGS) -o $@ $(SOURCE) -L$(LIBS_FOLDER) $(LIBS) $(INCUDES)
-
 
 $(ASSET_BUILDER): $(FOG_LIB)
 
@@ -45,7 +45,7 @@ $(FOG_LIB):
 
 clean:
 	make -C ../.. clean
-	rm lib/*
-	rm $(GAME_NAME)
-	rm $(ASSET_FILE)
+	rm -f lib/*
+	rm -f $(GAME_NAME)
+	rm -f $(ASSET_FILE)
 
