Clean up makefiles

--- a/game/hello_world/Makefile
+++ b/game/hello_world/Makefile
@@ -5,7 +5,7 @@ CC = gcc
 FLAGS = -ggdb -std=c11 -fPIC
 LIBS_FOLDER = lib
 
-FOG_LIB :=
+FOG_LIB =
 ifeq ($(shell uname -s),Darwin)
 	FOG_LIB = $(LIBS_FOLDER)/libfog.dylib
 endif
@@ -13,8 +13,8 @@ ifeq ($(shell uname -s),Linux)
 	FOG_LIB = $(LIBS_FOLDER)/libfog.a
 endif
 # Would be nice to remove some of these...
-LIBS = -lfog -lSDL2 -lSDL2main -ldl -lpthread -lc -lm -lc++
-INCUDES = -Iinc
+LIBS = -lfog -lSDL2 -lSDL2main -ldl -lpthread -lc -lm# -lc++
+INCLUDES = -Iinc
 
 ASSET_BUILDER = ../../out/mist
 ASSET_FILE = data.fog
@@ -26,26 +26,29 @@ SOURCE_FILES = $(shell find src/ -type f -name "*.*")
 default: game
 game: $(ASSET_FILE) $(GAME_NAME)
 
-run: $(GAME_NAME)
+run: game
 	./$(GAME_NAME)
 
 $(ASSET_FILE): $(ASSETS) $(ASSET_BUILDER)
 	$(ASSET_BUILDER) -o $@ $(ASSETS)
 
 $(GAME_NAME): $(SOURCE_FILES) $(FOG_LIB)
-	$(CC) $(FLAGS) -o $@ $(SOURCE) -L$(LIBS_FOLDER) $(LIBS) $(INCUDES)
+	$(CC) $(FLAGS) -o $@ $(SOURCE) -L$(LIBS_FOLDER) $(LIBS) $(INCLUDES)
 
 $(ASSET_BUILDER): $(FOG_LIB)
 
-$(FOG_LIB):
+$(LIBS_FOLDER):
+	mkdir -p $@
+
+$(FOG_LIB): | $(LIBS_FOLDER)
 	make -C ../..
-	cp ../../out/libfog.* lib/
+	cp ../../out/libfog.* $(LIBS_FOLDER)/
 	mkdir -p inc
 	cp ../../out/fog.h inc/
 
 clean:
 	make -C ../.. clean
-	rm -f lib/*
+	rm -rf $(LIBS_FOLDER)
 	rm -f $(GAME_NAME)
 	rm -f $(ASSET_FILE)
 
