Sprite editor is now working, it's not fully working but it's up there.

--- a/src/rain/Makefile
+++ b/src/rain/Makefile
@@ -1,5 +1,4 @@
 TARGET = ../../out/rain
-TARGET = rain
 
 CC = g++
 FLAGS = -ggdb -std=c++17
@@ -7,7 +6,7 @@ LIBS_FOLDER = ../../out
 
 LIBS = -lfog -lSDL2 -lSDL2main -ldl -lpthread -lc -lm# -lc++
 INCLUDES = -I$(LIBS_FOLDER)
-SOURCE_FILES = $(shell find *.*)
+SOURCE_FILES = $(shell find *.{cpp,h})
 
 .PHONY: default rain
 default: rain
