Makefile for one version of MSYS2/MinGW

--- a/src/rain/Makefile
+++ b/src/rain/Makefile
@@ -4,7 +4,14 @@ CC = g++
 FLAGS = -ggdb -std=c++17
 LIBS_FOLDER = ../../out
 
-LIBS = -lfog -lSDL2 -lSDL2main -ldl -lpthread -lc -lm# -lc++
+
+LIBS = ""
+ifeq ($(shell uname -s | cut -c -5),MINGW)
+    LIBS = -L/mingw64/lib -lfog -lSDL2 -LSDL2main
+else
+    LIBS = -lfog -lSDL2 -lSDL2main -ldl -lpthread -lc -lm
+endif
+
 INCLUDES = -I$(LIBS_FOLDER)
 SOURCE_FILES = $(shell find *.cpp)
 
